# zsbuild

./: .gitignore  Cargo.toml  LICENSE-MIT  build.rs
.github/workflows/: test.yml
native/: Makefile  common.h  error.go  go.mod  go.sum  main.go  mem.go  options.go  plugin.go  win32rt_patch.c
src/: context.rs  dispatch.rs  error.rs  lib.rs  plugin.rs  sys.rs  util.rs
test/: main.js
